# ROS_kinetic_ardrone

./: README.md
ardrone_config/: .setup_assistant  package.xml
ardrone_config/config/: sensors_3d.yaml
ardrone_config/launch/: chomp_planning_pipeline.launch.xml  demo_gazebo.launch  gazebo.launch  quadrotor_hokuyo_utm30lx_moveit_controller_manager.launch.xml  ros_controllers.launch
ardrone_test/: CMakeLists.txt  package.xml
ardrone_test/action/: TakeoffLand.action
ardrone_test/launch/: detect_controller.launch
ardrone_test/scripts/: convert_ros_cv.py  detect_face_tag_action.py  detect_tags.py  face_detect.py  face_detect_stream.py  generate_tags.py  img_process.py  ros_face_detect.py
ardrone_test/src/: takeoff_land_client.cpp  takeoff_land_server.cpp  toff_land_client.cpp  toff_land_server.cpp
ardrone_test/srv/: TakeoffLandService.srv
auto_flight/: CMakeLists.txt  package.xml
auto_flight/src/: test_drone.cpp
